Wired up password generation HTML.

--- a/client/main.html
+++ b/client/main.html
@@ -2,11 +2,15 @@
   <title>Secure Password Generator</title>
 </head>
 <body>
+
   <div class="container">
-    {{> header}}
-    {{> errors}}
-    <div id="main" class="row-fluid">
-      {{renderPage}}
-    </div>
-  </div>
+
+    {{> password}}
+
+    <footer class="text-right">
+      &copy; 2015 <a href="http://octonary.com">Octonary Inc.</a>
+    </footer>
+
+  </div> <!-- /.container -->
+
 </body>
