Wired up secure password package.

--- a/client/main.html
+++ b/client/main.html
@@ -4,13 +4,8 @@
 <body>
 
   <div class="container">
-
     {{> password}}
-
-    <footer class="text-right">
-      &copy; 2015 <a href="http://octonary.com">Octonary Inc.</a>
-    </footer>
-
+    {{> footer}}
   </div> <!-- /.container -->
 
 </body>
